# needle

./: CMakeLists.txt  Makefile  README.md
benchmarks/: bench_search.cpp  corpus_generator.hpp
results/: analysis.md  exp1_naive_vs_sa.json  exp2_suffix_tree_vs_sa.json  exp3_binary_vs_interpolation.json
src/: arena_trie_indexer.hpp  arena_trie_matcher.hpp  interpolation_matcher.hpp  main.cpp  mapped_file.hpp  matcher.hpp  naive_matcher.hpp  smoke_test.cpp  suffix_array_indexer.hpp  suffix_tree_indexer.hpp  suffix_tree_matcher.hpp  trie_indexer.hpp  trie_matcher.hpp  utf8_reader.hpp
tests/: test_arena_trie_matcher.cpp  test_interpolation_matcher.cpp  test_matcher.cpp  test_suffix_array_indexer.cpp  test_suffix_tree_matcher.cpp  test_trie_matcher.cpp  test_utf8_reader.cpp
